# ccresdoc

./: .editorconfig  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.claude/skills/b4push/: skill.md
.claude/skills/ccresdoc-build/: SKILL.md
.claude/skills/zfb-upstream-dev/: SKILL.md
.github/workflows/: ci.yml
__inbox/: no-node-spike.md  original-tokens-reference.md  phase1-parity-report.md
app/: .env.build  .npmrc  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  zfb-shim.d.ts  zfb.config.json  zfb.config.ts
app/components/: breadcrumb.tsx  code-block-enhancer.tsx  color-scheme-provider.tsx  desktop-sidebar-toggle.tsx  doc-frontmatter.tsx  doc-metainfo.tsx  doc-tags.tsx  footer.tsx  header.tsx  mermaid-init.tsx  mobile-toc.tsx  page-loading-overlay.tsx  sidebar-mount.tsx  sidebar-toggle.tsx  sidebar-tree.tsx  sidebar.tsx  tabs-init.tsx  theme-toggle.tsx  toc.tsx  tree-nav-shared.tsx
app/config/: color-schemes.ts
app/layouts/: default.tsx
app/pages/: 404.tsx  _data.ts  _mdx-components.ts  index.tsx  shell.tsx  test-content.tsx
app/pages/docs/: [[...slug]].tsx
app/pages/lib/: _body-end-islands.tsx  _compose-meta-title.ts  _footer-with-defaults.tsx  _head-with-defaults.tsx  _header-with-defaults.tsx  _sidebar-with-defaults.tsx
app/plugins/: copy-public.mjs  rename-shell.mjs
app/public/: ccresdoc-sidebar.js
app/src/components/: sidebar-tree.tsx
app/src/config/: color-scheme-utils.ts  color-schemes.ts  docs-schema.ts  i18n.ts  settings.ts
app/src/content/docs/: welcome.mdx
app/src/styles/: global.css
app/src/types/: docs-entry.ts  locale.ts
app/src/utils/: base.ts  docs.ts  slug.ts
app/styles/: global.css
crates/: CLAUDE.md
crates/ccresdoc-claude-md/: Cargo.toml
crates/ccresdoc-claude-md/src/: error.rs  escape.rs  generate.rs  lib.rs  walk.rs  watch.rs
crates/ccresdoc-claude-md/tests/: generate.rs  live_smoke.rs  watch.rs
crates/ccresdoc-renderer/: Cargo.toml  README.md
crates/ccresdoc-renderer/src/: admonitions.rs  code_title.rs  heading_links.rs  highlight.rs  lib.rs  strip_md.rs
crates/ccresdoc-renderer/tests/: render_tests.rs
crates/ccresdoc-renderer/tests/fixtures/: class-contract.html
crates/ccresdoc-resources/: Cargo.toml
crates/ccresdoc-resources/src/: lib.rs
crates/ccresdoc-resources/tests/: walker.rs
crates/ccresdoc-server/: Cargo.toml
crates/ccresdoc-server/examples/: serve_local.rs
crates/ccresdoc-server/src/: handlers.rs  lib.rs  manifest.rs  routes.rs
crates/ccresdoc-server/tests/: integration.rs
scripts/: check-zfb-pin.sh  run-b4push.sh  test-launch.sh
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
