# Build the .app bundle: cargo tauri build
# (requires `cargo install tauri-cli` or `cargo binstall tauri-cli`)

[package]
name = "ccresdoc"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
# TODO(#44): Wave 3 re-adds `ccresdoc-claude-md = { path = "../crates/ccresdoc-claude-md" }`
# (and tokio if the sidecar host needs an async runtime). Wave 2 removed the
# deleted `ccresdoc-server` dependency to keep the workspace compiling.
libc = "0.2"
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
