# Build the .app bundle: cargo tauri build
# (requires `cargo install tauri-cli` or `cargo binstall tauri-cli`)

[package]
name = "ccresdoc"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
# Wave 3 (#44): the node-free live-update engine — generate() at boot + watch()
# in-process. The host spawns the native `zfb dev` separately (process group),
# so no async runtime is needed here (the watcher owns its own thread).
ccresdoc-claude-md = { path = "../crates/ccresdoc-claude-md" }
libc = "0.2"
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
