[package]
name = "ccresdoc-claude-md"
version = "0.1.0"
edition = "2021"
description = "Generates zudo-doc-compatible MDX from ~/.claude/ and watches for changes"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
log = "0.4"
thiserror = "1"
notify = "6"
notify-debouncer-full = "0.3"

[dev-dependencies]
tempfile = "3"
