[package]
name = "ccresdoc-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = { version = "0.36", features = [] }
lol_html = "2.1"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
thiserror = "2.0"
once_cell = "1.20"

[dev-dependencies]
