[package]
name = "ccresdoc-resources"
version = "0.1.0"
edition = "2021"
description = "Walker for $HOME/.claude/ that returns a ResourceTree"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
log = "0.4"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
